<resources>
    <string name="app_name">UI</string>

    <string name="ui_load_more_no_more">没有更多了</string>
    <string name="ui_load_more_loading">加载中</string>
    <string name="ui_load_more_failed_and_retry">加载失败，点击重新加载</string>

    <string name="ui_expandable_text_view_expand">展开</string>
    <string name="ui_expandable_text_view_collapse">收起</string>

    <!--oops-->
    <string name="ui_oops_net_error">与世界的链接中断了?\n(网络连接中断)</string>
    <string name="ui_oops_label">Oops!</string>

    <!--share-->
    <string name="ui_share_title">一键分享到</string>
    <string name="ui_share_channel_qq">QQ</string>
    <string name="ui_share_channel_wx_friend">微信</string>
    <string name="ui_share_channel_wx_circle">朋友圈</string>
    <string name="ui_share_channel_weibo">微博</string>
    <string name="ui_share_cancel">取消</string>

</resources>
